@startuml ClassDiagram
class Cliente {
  - nome: String
  - email: String
  - telefone: String
  + realizarPedido()
  + cancelarPedido()
}

class Administrador {
  + atualizarEstoque()
  + aplicarDesconto()
}

class Produto {
  - id: int
  - nome: String
  - descricao: String
  - preco: float
  + atualizarEstoque()
  + aplicarDesconto()
}

class Pedido {
  - id: int
  - data: Date
  - total: float
  + calcularTotal()
  + adicionarItem()
  + removerItem()
}

class ItemPedido {
  - quantidade: int
  - precoUnitario: float
  + calcularSubtotal()
}

class Pagamento {
  - id: int
  - metodo: String
  - status: String
  + processarPagamento()
  + confirmarPagamento()
}

Cliente "1" -- "0..*" Pedido
Administrador -- Produto
Pedido "1" -- "1..*" ItemPedido
ItemPedido "1" -- "1" Produto
Pedido "1" -- "1" Pagamento
@enduml